# blahgr

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.docker/: Dockerfile
blahgr/: asgi.py  settings.py  urls.py  wsgi.py
blog/: forms.py  models.py  queries.py  urls.py  views.py
blog/management/commands/: seedblog.py
blog/migrations/: 0001_initial.py  0002_post_blog_post_author_id_title_uniq.py  0003_alter_comment_post_alter_post_title.py  0004_alter_comment_options_alter_post_options_and_more.py
blog/templates/: details.html  index.html  new.html
public/: main.css
templates/: base.html  footer.html  header.html  messages.html
users/: forms.py  urls.py  views.py
users/templates/: login.html  signin.html
