[tool.poetry]
name = "blahgr"
version = "0.1.0"
description = "blogs made simple"
authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
