[tool.poetry]
name = "blahgr"
version = "0.2.0"
description = "blogs made simple"
authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]
django-seed = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
